# hal9001

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
hal9001/: cli.py  conf.py  prompts.py
hal9001/service/: google.py  openai.py  pygame.py  speech.py  thread.py
hal9001/types/: config.py  message.py
mosquitto/: mosquitto.conf
